--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ env:
 
   matrix:
   - LINT_CHECK="1"
-  - TESTS="1" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority,helpdesk_phone,helpdesk_scope,helpdesk_ticket_to_task"
-  - TESTS="1" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority,helpdesk_phone,helpdesk_scope,helpdesk_ticket_to_task"
+  - TESTS="1" ODOO_REPO="OCA/OCB" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority,helpdesk_phone,helpdesk_scope,helpdesk_ticket_to_task,agreement_rma"
+  - TESTS="1" ODOO_REPO="odoo/odoo" LINT_CHECK="0" EXCLUDE="helpdesk_ticket_type_default_priority,helpdesk_phone,helpdesk_scope,helpdesk_ticket_to_task,agreement_rma"
 
 install:
   - git clone --depth=1 https://github.com/ursais/maintainer-quality-tools.git ${HOME}/maintainer-quality-tools
